title.crew.tsv processing was added

--- a/hw1/CMakeLists.txt
+++ b/hw1/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(lib/name_basics)
+add_subdirectory(lib/title_crew)
 
 add_executable(hw1 src/main.cpp)
 
-target_link_libraries(hw1 name_basics)
+target_link_libraries(hw1 name_basics title_crew)
