--- a/hw1/CMakeLists.txt
+++ b/hw1/CMakeLists.txt
@@ -5,4 +5,7 @@ add_subdirectory(lib/title_crew)
 
 add_executable(hw1 src/main.cpp)
 
-target_link_libraries(hw1 name_basics title_akas title_basics title_crew)
+target_link_libraries(hw1 name_basics /
+                          title_akas /
+                          title_basics /
+                          title_crew)
