the functionality was evenly distributed

--- a/hw1/lib/name_basics/CMakeLists.txt
+++ b/hw1/lib/name_basics/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_library(name_basics src/name_basics.cpp)
 
 target_include_directories(name_basics PUBLIC include)
+
+target_link_libraries(name_basics dataset)
