--- a/hw1/lib/title_basics/CMakeLists.txt
+++ b/hw1/lib/title_basics/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_library(title_basics src/title_basics.cpp)
 
 target_include_directories(title_basics PUBLIC include)
+
+target_link_libraries(title_basics dataset)
