empty .cpp files were deleted

--- a/hw1/lib/title_akas/CMakeLists.txt
+++ b/hw1/lib/title_akas/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_library(title_akas src/title_akas.cpp)
+add_library(title_akas INTERFACE)
 
-target_include_directories(title_akas PUBLIC include)
+target_include_directories(title_akas INTERFACE include)
 
-target_link_libraries(title_akas dataset)
+target_link_libraries(title_akas INTERFACE dataset)
