--- a/hw1/lib/name_basics/CMakeLists.txt
+++ b/hw1/lib/name_basics/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_library(name_basics src/name_basics.cpp)
+add_library(name_basics INTERFACE)
 
-target_include_directories(name_basics PUBLIC include)
+target_include_directories(name_basics INTERFACE include)
 
-target_link_libraries(name_basics dataset)
+target_link_libraries(name_basics INTERFACE dataset)
