fixed memory leaks

--- a/hw2/CMakeLists.txt
+++ b/hw2/CMakeLists.txt
@@ -7,3 +7,7 @@ add_subdirectory(lib/utils)
 add_executable(hw2 src/main.cpp)
 
 target_link_libraries(hw2 cat echo head utils)
+
+target_compile_options(hw2 PUBLIC -fsanitize=address)
+
+target_link_options(hw2 PUBLIC -fsanitize=address)
